# openconnect-gp-okta

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  openconnect-gp-okta  openconnect_gp_okta.py  pyproject.toml  requirements.txt
